--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.MHZ.LobbySystem",
+  "name": "com.mhz.lobby-system",
   "version": "1.0.0",
   "displayName": "MHZ-LobbySystem",
   "unity": "2020.3",
